# cgol-tui-rs

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
.github/workflows/: rust.yml
scripts/: pattern.fish
src/: app.rs  kmaps.rs  lib.rs  main.rs  shapes.rs  tests.rs  ui.rs
src/app/: area.rs  cell.rs  kmaps.rs  shapes.rs  tests.rs  ui.rs  universe.rs
src/app/shapes/: tests.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json
